# nanomap_ros

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  fov_evaluator.cc  fov_evaluator.h  frustum_visualization.h  kd_tree.h  kd_tree_two.h  nanomap.cc  nanomap.h  nanomap_types.h  nanomap_visualizer.cc  nanomap_visualizer.h  package.xml  point_cloud_manager.h  pose_manager.cc  pose_manager.h  structured_point_cloud.h  structured_point_cloud_chain.cc  structured_point_cloud_chain.h
example_nodes/: benchmarking_node.cpp  visualization_node.cpp
src/: benchmarking_node.cpp  fov_evaluator.cc  fov_evaluator.h  frustum_visualization.h  kd_tree_two.h  nanomap.cc  nanomap.h  nanomap_types.h  nanomap_visualizer.cc  nanomap_visualizer.h  pcl.cc  pcl.h  pose_manager.cc  pose_manager.h  stopwatch.h  structured_point_cloud.h  structured_point_cloud_chain.cc  structured_point_cloud_chain.h
test/: test_nanomap.cpp
